# polar-dash

./: .gitignore  AGENTS.md  README.md  pyproject.toml
defaults/: default_breathing_calibration.json
docs/: breathing-rate-research.md
macos/BreathingBar/: Package.swift
macos/BreathingBar/AppSupport/: Info.plist
macos/BreathingBar/Sources/BreathingBar/: AppMain.swift  HistoryGraphSupport.swift  RuntimeModel.swift  main.swift
macos/BreathingBar/Sources/BreathingBarCore/: BreathingEngine.swift  DefaultCalibrationStore.swift  MetricHistoryStore.swift  PolarBluetoothCollector.swift  PolarProtocol.swift  SQLiteRuntimeStore.swift
macos/BreathingBar/Tests/BreathingBarTests/: BreathingEngineTests.swift  DefaultCalibrationStoreTests.swift  HistoryGraphSupportTests.swift  MetricHistoryStoreTests.swift  PolarProtocolTests.swift  SQLiteRuntimeStoreTests.swift
scripts/: deploy-breathingbar-app.sh  hr-dash-stack  install-hr-stack.sh
src/polar_dash/: __init__.py  breathing.py  cockpit.py  collector.py  dashboard.py  evaluate.py  labeler.py  labeler_v2.py  storage.py
tests/: test_breathing.py  test_cockpit.py  test_collector.py  test_evaluate.py  test_labeler_v2.py
