[project]
name = "polar-dash"
version = "0.1.0"
description = "Polar H10 live physiology dashboard with persisted raw BLE data"
readme = "README.md"
authors = [
    { name = "Sebastian Kouba", email = "little.sebby@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
polar-dash = "polar_dash:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
