[project]
name = "polar-dash"
version = "0.1.0"
description = "Polar H10 live physiology dashboard with persisted raw BLE data"
readme = "README.md"
authors = [
    { name = "Sebastian Kouba", email = "little.sebby@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "bleakheart>=0.2.0",
    "pandas>=2.3.3",
    "scipy>=1.17.1",
    "streamlit>=1.55.0",
]

[project.scripts]
polar-dash = "polar_dash:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
